# PI

pi_lab_1/: README.md  readme.md  workspace.dsl
pi_lab_2/: README.md  docker-compose.yml
pi_lab_2/api-specs/: cart-service-openapi.json  product-service-openapi.json  user-service-openapi.json
pi_lab_2/cart-service/: Dockerfile  main.py  pyproject.toml
pi_lab_2/product-service/: Dockerfile  main.py  pyproject.toml
pi_lab_2/user-service/: Dockerfile  main.py  pyproject.toml
pi_lab_3/: README.md  docker-compose.yml
pi_lab_3/api-specs/: cart-service-openapi.json  product-service-openapi.json  user-service-openapi.json
pi_lab_3/cart-service/: Dockerfile  main.py  pyproject.toml
pi_lab_3/product-service/: main.py
pi_lab_3/user-service/: main.py  models.py  pyproject.toml
pi_lab_4/: README.md  docker-compose.yml
pi_lab_4/api-specs/: cart-service-openapi.json  product-service-openapi.json  user-service-openapi.json
pi_lab_4/cart-service/: config.py  main.py
pi_lab_4/product-service/: models.py  pyproject.toml
pi_lab_4/user-service/: Dockerfile  config.py  crud.py  database.py  main.py  models.py  pyproject.toml
pi_lab_5/: README.md  docker-compose.yml  logs.txt
pi_lab_5/api-specs/: user-service-openapi.json
pi_lab_5/cart-service/: pyproject.toml
pi_lab_5/product-service/: Dockerfile  config.py  init_data.py  main.py  mongo_utils.py
pi_lab_5/user-service/: Dockerfile  config.py  crud_no_cache.py  crud_with_cache.py  database.py  main.py  models.py  pyproject.toml  redis_utils.py
